# minesweeper

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.bat  resources.rc
.github/workflows/: deploy.yml
src/: Board.cpp  Board.h  Cell.h  Game.cpp  Game.h  StatManager.cpp  StatManager.h  UI.cpp  UI.h  shell.html
